python-apt (0.7.9) UNRELEASED; urgency=low

  Merged python-apt consolidation branch by Sebastian
  Heinlein (many thanks):
  * apt/cache.py:
    - new method "isVirtualPackage()" 
    - new method "getProvidingPackages()"
  * apt/debfile.py:
    - move a lot of the gdebi code into this file, this
      provides interfaces for querrying and installing
      .deb files and .dsc files
  * apt/package.py:
    - better description parsing 
    - new method "installedFiles()"
    - new method "getChangelog()"
  * apt/gtk/widgets.py:
    - new gobject GOpProgress
    - new gobject GFetchProgress
    - new gobject GInstallProgress
    - new gobject GDpkgInstallProgress
    - new widget GtkAptProgress
  * doc/examples/gui-inst.py: 
    - updated to use the new widgets
  * debian/control:
    - add suggests for python-gtk2 and python-vte

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 24 Nov 2008 14:30:32 +0100

python-apt (0.7.8) unstable; urgency=low

  [ Michael Vogt ]
  * python/cache.cc:
    - fix crash if Ver.PriorityType() returns NULL 
    - fix GetCandidateVer() reporting incorrect versions after
      SetCandidateVer() was used. Thanks to Julian Andres Klode for
      the test-case (LP: #237372)
  * python/apt_instmodule.cc:
    - do not change working dir in debExtractArchive() (LP: #184093)
  * apt/cache.py:
    - support "in" in apt.Cache() (LP: #251587)
  * apt/package.py:
    - do not return None in sourcePackageName (LP: #123062)
  * python/progress.cc:
    - when pulse() does not return a boolean assume "true"
      (thanks to Martin Pitt for telling me about the problem)
  * python/apt_pkgmodule.cc:
    - add "SelState{Unknown,Install,Hold,DeInstall,Purge}" constants
  * aptsources/__init__.py, aptsources/distinfo.py:
    - run apt_pkg.init() when aptsources gets imported and not
      the distinfo function
    - fix detection of cdrom sources and add test for it
  * python/metaindex.cc
    - fix crash when incorrect attribute is given